# stocksagecrew

./: README.md  pyproject.toml  report.md  ui.py
db/: chroma.sqlite3
src/stocksagecrew/: crew.py  main.py  market_news.py  search_stock.py
src/stocksagecrew/config/: agents.yaml  tasks.yaml
