[project]
name = "stocksagecrew"
version = "0.1.0"
description = "StockSageCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
stocksagecrew = "stocksagecrew.main:run"
run_crew = "stocksagecrew.main:run"
train = "stocksagecrew.main:train"
replay = "stocksagecrew.main:replay"
test = "stocksagecrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
